--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Bibliografia</title>
+<meta charset="UTF-8">
 </head>
-<body>
+  <body style="background-color:lightcoral">
 
-<h1>Renan Gustavo de Oliveira Ramos</h1>
-<h2>Bibliografia</h2>
-<p></p>
+<h1>Bibliografia</h1>
+<p>---------------------------------------------------------------------</p>
+<h2>Renan Gustavo de Oliveira Ramos</h2>
+<p>---------------------------------------------------------------------</p>
+<h2>Sobre</h2>
+<P> - Obtive minha primeira experiência profissional na área de atendimento ao cliente, na rede americana Outback Steakhouse.</p>
+<p> - Trabalho atualmente na área de implantação de software.</p>
 
 </body>
 </html>
