Alterações na bibliografia

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 <title>Bibliografia</title>
 <meta charset="UTF-8">
+
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-  <body style="background-color:lightcoral">
+  <body>
+
 
 <h1>Bibliografia</h1>
-<p>---------------------------------------------------------------------</p>
-<h2>Renan Gustavo de Oliveira Ramos</h2>
-<p>---------------------------------------------------------------------</p>
-<h2>Sobre</h2>
-<P> - Obtive minha primeira experiência profissional na área de atendimento ao cliente, na rede americana Outback Steakhouse.</p>
-<p> - Trabalho atualmente na área de implantação de software.</p>
-
+<h4>------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</h4>
+<h2>Renan Gustavo de Oliveira Ramos</h1>
+<h4>------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</h4>
+<h2>Formação Acadêmica</h2>
+<p> - Entrei na UFG em 2013, no curso de Ciência da Computação.</p> 
+<p> - Após 3 semestres decidi tentar realizar a mudança para o curso de Sistemas de Informação, devido a ementa do curso ser focada mais na área de gestão.</p>
+<p> - Atualmente estou no 5 período, e pretendo me formar até 2019/1.</p>
+<h4>------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</h4>
+<h2>Formação Profissional</h2>
+<P> - Obtive minha primeira experiência profissional na área de atendimento ao cliente, onde trabalhei durante 9 meses na rede americana Outback Steakhouse.</p>
+<p> - Tive meu primeiro contato com a área de TI em uma oportunidade de estagiar no Ministério Público de Goiás na área de Suporte Técnico, onde fiquei durante 8 meses.</p>
+<p> - E atualmente faço estágio na área de implantação de software, onde pretendo ficar por um bom tempo.</p>
+<h4>------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</h4>
 </body>
 </html>
